--- a/PreVsPostAnalysis_DayNight_Dec2019.Rmd
+++ b/PreVsPostAnalysis_DayNight_Dec2019.Rmd
@@ -8,9 +8,9 @@ Extract UDs for pre/post/day/night combinations. Also for each individual and co
 ```{r message=FALSE}
 rm(list = ls())
 
-ifelse(Sys.info()[1] == 'Linux',
-       source('~/Documents/R/tools/TomosFunctions.R'),
-       source('~/R/tools/TomosFunctions.R'))
+# ifelse(Sys.info()[1] == 'Linux',
+#        source('~/Documents/R/tools/TomosFunctions.R'),
+#        source('~/R/tools/TomosFunctions.R'))
 
 #library(readxl)
 library(dplyr)
@@ -25,7 +25,7 @@ library(ggridges)
 source("HR_analysis_fcns.R")
 
 # internet <- F #TRUE
-save.fig <- T
+save.fig <- F
 
 # Minimum number of relocations per individual to be included in HR analysis
 min_n <- 50
@@ -153,10 +153,10 @@ UD.pre <- kernelUD(pre.kd$list.data$all.utm,
 UD.pre.95 <- getverticeshr(UD.pre, 95)
 UD.pre.50 <- getverticeshr(UD.pre, 50)
     
-UD.pre.95.latlon <- broom::tidy(spTransform(UD.pre.95, 
-                                            CRS("+proj=longlat")))
-UD.pre.50.latlon <- broom::tidy(spTransform(UD.pre.50, 
-                                            CRS("+proj=longlat")))
+# UD.pre.95.latlon <- broom::tidy(spTransform(UD.pre.95, 
+#                                             CRS("+proj=longlat")))
+# UD.pre.50.latlon <- broom::tidy(spTransform(UD.pre.50, 
+#                                             CRS("+proj=longlat")))
 
 # work on the post period
 h.post.1 <- find.h.adhoc(post.kd$list.data$all.utm)
@@ -171,10 +171,10 @@ UD.post <- kernelUD(post.kd$list.data$all.utm,
 UD.post.95 <- getverticeshr(UD.post, 95)
 UD.post.50 <- getverticeshr(UD.post, 50)
     
-UD.post.95.latlon <- broom::tidy(spTransform(UD.post.95, 
-                                             CRS("+proj=longlat")))
-UD.post.50.latlon <- broom::tidy(spTransform(UD.post.50, 
-                                             CRS("+proj=longlat")))
+# UD.post.95.latlon <- broom::tidy(spTransform(UD.post.95, 
+#                                              CRS("+proj=longlat")))
+# UD.post.50.latlon <- broom::tidy(spTransform(UD.post.50, 
+#                                              CRS("+proj=longlat")))
 
 
 ```
@@ -194,12 +194,12 @@ UD.pre.day <- kernelUD(pre.day.kd$list.data$all.utm,
 UD.pre.day.95 <- getverticeshr(UD.pre.day, 95)
 UD.pre.day.50 <- getverticeshr(UD.pre.day, 50)
     
-UD.pre.day.95.latlon <- broom::tidy(spTransform(UD.pre.day.95,
-                                                CRS("+proj=longlat")))
-UD.pre.day.95.latlon$daynight <- "day"
-UD.pre.day.50.latlon <- broom::tidy(spTransform(UD.pre.day.50,
-                                                CRS("+proj=longlat")))
-UD.pre.day.50.latlon$daynight <- "day"
+# UD.pre.day.95.latlon <- broom::tidy(spTransform(UD.pre.day.95,
+#                                                 CRS("+proj=longlat")))
+# UD.pre.day.95.latlon$daynight <- "day"
+# UD.pre.day.50.latlon <- broom::tidy(spTransform(UD.pre.day.50,
+#                                                 CRS("+proj=longlat")))
+# UD.pre.day.50.latlon$daynight <- "day"
 
 h.pre.1 <- find.h.adhoc(pre.night.kd$list.data$all.utm)
 h.pre.night <- ceiling(h.pre.1$h)
@@ -212,17 +212,17 @@ UD.pre.night <- kernelUD(pre.night.kd$list.data$all.utm,
 UD.pre.night.95 <- getverticeshr(UD.pre.night, 95)
 UD.pre.night.50 <- getverticeshr(UD.pre.night, 50)
     
-UD.pre.night.95.latlon <- broom::tidy(spTransform(UD.pre.night.95,
-                                                  CRS("+proj=longlat")))
-UD.pre.night.95.latlon$daynight <- "night"
-UD.pre.night.50.latlon <- broom::tidy(spTransform(UD.pre.night.50,
-                                                  CRS("+proj=longlat")))
-UD.pre.night.50.latlon$daynight <- "night"
-
-UD.pre.day.night.95.latlon <- rbind(UD.pre.day.95.latlon, 
-                                    UD.pre.night.95.latlon)
-UD.pre.day.night.50.latlon <- rbind(UD.pre.day.50.latlon, 
-                                    UD.pre.night.50.latlon)
+# UD.pre.night.95.latlon <- broom::tidy(spTransform(UD.pre.night.95,
+#                                                   CRS("+proj=longlat")))
+# UD.pre.night.95.latlon$daynight <- "night"
+# UD.pre.night.50.latlon <- broom::tidy(spTransform(UD.pre.night.50,
+#                                                   CRS("+proj=longlat")))
+# UD.pre.night.50.latlon$daynight <- "night"
+# 
+# UD.pre.day.night.95.latlon <- rbind(UD.pre.day.95.latlon, 
+#                                     UD.pre.night.95.latlon)
+# UD.pre.day.night.50.latlon <- rbind(UD.pre.day.50.latlon, 
+#                                     UD.pre.night.50.latlon)
 ```
 
 For the post period
@@ -239,12 +239,12 @@ UD.post.day <- kernelUD(post.day.kd$list.data$all.utm,
 UD.post.day.95 <- getverticeshr(UD.post.day, 95)
 UD.post.day.50 <- getverticeshr(UD.post.day, 50)
     
-UD.post.day.95.latlon <- broom::tidy(spTransform(UD.post.day.95,
-                                                 CRS("+proj=longlat")))
-UD.post.day.95.latlon$daynight <- "day"
-UD.post.day.50.latlon <- broom::tidy(spTransform(UD.post.day.50,
-                                                 CRS("+proj=longlat")))
-UD.post.day.50.latlon$daynight <- "day"
+# UD.post.day.95.latlon <- broom::tidy(spTransform(UD.post.day.95,
+#                                                  CRS("+proj=longlat")))
+# UD.post.day.95.latlon$daynight <- "day"
+# UD.post.day.50.latlon <- broom::tidy(spTransform(UD.post.day.50,
+#                                                  CRS("+proj=longlat")))
+# UD.post.day.50.latlon$daynight <- "day"
 
 h.post.1 <- find.h.adhoc(post.night.kd$list.data$all.utm)
 h.post.night <- ceiling(h.post.1$h)
@@ -257,47 +257,36 @@ UD.post.night <- kernelUD(post.night.kd$list.data$all.utm,
 UD.post.night.95 <- getverticeshr(UD.post.night, 95)
 UD.post.night.50 <- getverticeshr(UD.post.night, 50)
     
-UD.post.night.95.latlon <- broom::tidy(spTransform(UD.post.night.95,
-                                                   CRS("+proj=longlat")))
-UD.post.night.95.latlon$daynight <- "night"
-UD.post.night.50.latlon <- broom::tidy(spTransform(UD.post.night.50,
-                                                   CRS("+proj=longlat")))
-UD.post.night.50.latlon$daynight <- "night"
+# UD.post.night.95.latlon <- broom::tidy(spTransform(UD.post.night.95,
+#                                                    CRS("+proj=longlat")))
+# UD.post.night.95.latlon$daynight <- "night"
+# UD.post.night.50.latlon <- broom::tidy(spTransform(UD.post.night.50,
+#                                                    CRS("+proj=longlat")))
+# UD.post.night.50.latlon$daynight <- "night"
 
 
-UD.post.day.night.95.latlon <- rbind(UD.post.day.95.latlon, 
-                                     UD.post.night.95.latlon)
-UD.post.day.night.50.latlon <- rbind(UD.post.day.50.latlon, 
-                                     UD.post.night.50.latlon)
+# UD.post.day.night.95.latlon <- rbind(UD.post.day.95.latlon, 
+#                                      UD.post.night.95.latlon)
+# UD.post.day.night.50.latlon <- rbind(UD.post.day.50.latlon, 
+#                                      UD.post.night.50.latlon)
 ```
-
 
 Save results. 
 
 ```{r message=FALSE}
 #These are the only things needed for making plots
 save.list <- list(UD.eachID.pre.daynight = UD.eachID.pre.combined, 
-                  UD.eachID.post.daynight = UD.eachID.post.combined,
                   UD.eachID.pre.day = UD.eachID.pre.day, 
                   UD.eachID.pre.night = UD.eachID.pre.night, 
+                  UD.allID.pre.daynight = UD.pre, 
+                  UD.allID.pre.day = UD.pre.day,
+                  UD.allID.pre.night = UD.pre.night,
+                  UD.eachID.post.daynight = UD.eachID.post.combined,
                   UD.eachID.post.day = UD.eachID.post.day, 
                   UD.eachID.post.night = UD.eachID.post.night, 
-                  UD95.allID.post.daynight = UD.post.95.latlon, 
-                  UD50.allID.post.daynight = UD.post.50.latlon, 
-                  UD95.allID.pre.daynight = UD.pre.95.latlon, 
-                  UD50.allID.pre.daynight = UD.pre.50.latlon, 
-                  UD95.allID.pre.day = UD.pre.day.95.latlon, 
-                  UD50.allID.pre.day = UD.pre.day.50.latlon,
-                  UD95.allID.pre.night = UD.pre.night.95.latlon, 
-                  UD50.allID.pre.night = UD.pre.night.50.latlon, 
-                  UD95.allID.post.day = UD.post.day.95.latlon,
-                  UD50.allID.post.day = UD.post.day.50.latlon, 
-                  UD95.allID.post.night = UD.post.night.95.latlon, 
-                  UD50.allID.post.night = UD.post.night.50.latlon,
-                  UD95.allID.pre.day.night = UD.pre.day.night.95.latlon, 
-                  UD50.allID.pre.day.night = UD.pre.day.night.50.latlon,
-                  UD95.allID.post.day.night = UD.post.day.night.95.latlon, 
-                  UD50.allID.post.day.night = UD.post.day.night.50.latlon)
+                  UD.allID.post.daynight = UD.post, 
+                  UD.allID.post.day = UD.post.day,
+                  UD.allID.post.night = UD.post.night)
 
 saveRDS(save.list, file = "RData/PreVsPost_DayNight_Dec2019.RDS")
 
